--- a/index.html
+++ b/index.html
@@ -335,12 +335,7 @@
   </div>
 </footer>
 
-<!-- Statcounter tracking code -->
-  
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
-
-    <!-- End of Statcounter Code -->
-  <!-- Default Statcounter code for WeatherDG
+<!-- Default Statcounter code for WeatherDG
 https://jumponthemoon.github.io/WeatherDG.github.io/ -->
 <script type="text/javascript">
 var sc_project=13072291; 
@@ -350,11 +345,11 @@ var sc_security="d908a816";
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
 async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
+<noscript><div class="statcounter"><a title="hit counter"
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="https://c.statcounter.com/13072291/0/d908a816/1/"
-alt="Web Analytics"
+alt="hit counter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
   </body>
